--- a/app/views/serverspecs/_gen_it.html.erb
+++ b/app/views/serverspecs/_gen_it.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-info">
   <div class="panel-heading">
-    <button class="btn btn-danger pull-right btn-xs" v-on="click: removeIt(desc, $index)"><span class="glyphicon glyphicon-remove"></span></button>
+    <button class="btn btn-danger pull-right btn-xs" v-on="click: $parent.removeIt(idx)"><span class="glyphicon glyphicon-remove"></span></button>
     <h3 v-if="it.type === 'it'"  class="panel-title">{{it.matcher.name}}</h3>
     <h3 v-if="it.type === 'its'" class="panel-title">{{it.name}} {{it.matcher.name}}</h3>
   </div>
