--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="row form-actions-top">
-    <button class="btn btn-primary">Create</button>
+    <button class="btn btn-primary" v-on="click: create()">Create</button>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
       serverspecs_path, class: 'btn-default btn' %>
   </div>
