--- a/app/assets/stylesheets/bootstrap_extend.css
+++ b/app/assets/stylesheets/bootstrap_extend.css
@@ -138,6 +138,7 @@ input[type="number"] {
 /*  Define the background color for all the EVEN table columns  */
 .ssp th:nth-child(even){
   background: rgba(98, 105, 106, 0.13);
+}
 
 h1, .h1 {
   font-size: 36px;
