--- a/app/views/cf_templates/_show.html.erb
+++ b/app/views/cf_templates/_show.html.erb
@@ -6,5 +6,15 @@
   <h5><%= t('cf_templates.details') %></h5>
   <pre><%= @cf_template.detail %></pre>
   <h5><%= t('cf_templates.cf_template') %></h5>
-  <pre><%= @cf_template.value %></pre>
+  <pre id="cf_value"><%= @cf_template.value %></pre>
+  <script >
+    var viewer = ace.edit('cf_value');
+    viewer.setOptions({
+      maxLines: Infinity,
+      minLines: 15,
+      readOnly: true
+    });
+    viewer.setTheme("ace/theme/github");
+    viewer.getSession().setMode("ace/mode/json");
+  </script>
 </div>
