--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -82,6 +82,11 @@
           <td><%= link_and_dropdown_ssh('ec2.public_ip') %></td>
           <td><%= copy_to_clipboard_button('ec2.public_ip') %></td>
         </tr>
+        <tr v-if="ec2.platform">
+          <td> Platform </td>
+          <td><text class="text text-primary" v-text="ec2.platform"></text></td>
+          <td></td>
+        </tr>
       </tbody>
     </table>
   </div>
