Link to document

--- a/app/views/serverspecs/_gen_resource.html.erb
+++ b/app/views/serverspecs/_gen_resource.html.erb
@@ -14,7 +14,7 @@
             <option><%= type %></option>
           <% end %>
         </select>
-        <%# <input type="text" class="form-control" required> %>
+        <a href="http://serverspec.org/resource_types.html#{{desc.resourceType}}">Ref</a>
       </label>
     </div>
 
