--- a/app/views/serverspecs/_gen_resource.html.erb
+++ b/app/views/serverspecs/_gen_resource.html.erb
@@ -1,10 +1,11 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <button class="btn btn-danger pull-right btn-xs" v-on="click: $parent.removeDescribe(idx)"><span class="glyphicon glyphicon-remove"></span></button>
+    <button class="btn btn-default pull-right btn-xs" v-on="click: accordionToggle"><span class="glyphicon glyphicon-chevron-down"></span></button>
     <h3 class="panel-title">{{desc.resourceType + "(" + desc.name + ")"}}</h3>
   </div>
 
-  <div class="panel-body">
+  <div class="panel-body collapse in">
 
     <div class="form-group">
       <label>
