--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -171,7 +171,7 @@
           <span class="sr-only">Toggle Dropdown</span>
         </button>
         <ul class="dropdown-menu">
-          <li><a v-on="click: cook({whyrun: true})" href="#">Cook in why-run mode</a></li>
+          <li><a v-on="click: cook({whyrun: true})" href="#"><%= t 'nodes.cook_in_why_run_mode' %></a></li>
         </ul>
       </div>
       <button v-on="click: edit_runlist()" class="btn btn-default btn-sm"><%= t 'nodes.btn.edit_runlist' %></button>
