--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -15,7 +15,7 @@
 
     <div class="col-xs-6">
       <h2 class="page-header"><%=t('serverspecs.generator.generated')%></h2>
-      <pre><code v-text="rubyCode"></code></pre>
+      <pre id="rCode"><code v-text="rubyCode"></code></pre>
     </div>
   </div>
 
