--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -163,15 +163,15 @@
   <div class="col-xs-12" v-if="!inprogress">
     <div class="form-actions-top">
       <div v-class="border-blink: cook_status === 'UnExecuted' && ec2.attribute_set" class="btn-group dropup">
-        <button v-on="click: cook({whyrun: false})" v-attr="disabled: !ec2.attribute_set" class="btn btn-sm btn-primary">
-          <%= t 'nodes.cook'%>
+        <button v-on="click: cook({whyrun: true})" v-attr="disabled: !ec2.attribute_set" class="btn btn-sm btn-primary">
+          <%= t 'nodes.cook_in_why_run_mode'%>
         </button>
         <button type="button" v-attr="disabled: !ec2.attribute_set" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span class="caret"></span>
           <span class="sr-only">Toggle Dropdown</span>
         </button>
         <ul class="dropdown-menu">
-          <li><a v-on="click: cook({whyrun: true})" href="#"><%= t 'nodes.cook_in_why_run_mode' %></a></li>
+          <li><a v-on="click: cook({whyrun: false})" href="#"><%= t 'nodes.cook' %></a></li>
         </ul>
       </div>
       <button v-on="click: edit_runlist()" class="btn btn-default btn-sm"><%= t 'nodes.btn.edit_runlist' %></button>
