--- a/app/views/serverspecs/_gen_resource.html.erb
+++ b/app/views/serverspecs/_gen_resource.html.erb
@@ -7,18 +7,21 @@
   </div>
 
   <div class="panel-body collapse in">
-
-    <div class="form-group">
-      <label>
-        <%= t('serverspecs.generator.resource_type') %>
-        <select v-model="desc.resourceType">
-          <% resource_types.each do |type| %>
-            <option><%= type %></option>
-          <% end %>
-        </select>
-        <a href="http://serverspec.org/resource_types.html#{{desc.resourceType}}" target="_blank">Ref</a>
-      </label>
-    </div>
+    <form class="form-inline">
+      <div class="form-group">
+        <label>
+          <%= t('serverspecs.generator.resource_type') %>:
+        </label>
+          <select class="form-control" v-model="desc.resourceType">
+            <% resource_types.each do |type| %>
+              <option><%= type %></option>
+            <% end %>
+          </select>
+      </div>
+      <div class="form-group">
+          <a href="http://serverspec.org/resource_types.html#{{desc.resourceType}}" target="_blank">Ref</a>
+      </div>
+    </form>
 
     <div class="form-group">
       <label>
