--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -5,7 +5,9 @@
     <div class="col-xs-6">
 
       <h3><%=t('serverspecs.generator.resources')%></h3>
-      <button class="btn btn-success" v-on="click: addDescribe()"><%=t('serverspecs.generator.add_resource')%></button>
+      <button class="btn btn-default" v-on="click: addDescribe()">
+        <span class="glyphicon glyphicon-plus-sign"></span> <%=t('serverspecs.generator.add_resource')%>
+      </button>
 
       <div v-repeat="desc: ast">
         <resource-panel desc="{{@ desc}}" idx="{{$index}}"></resource-panel>
@@ -15,7 +17,7 @@
 
     <div class="col-xs-6">
       <h2 class="page-header"><%=t('serverspecs.generator.generated')%></h2>
-      <pre id="rCode"><code v-text="rubyCode"></code></pre>
+      <pre v-ace="rubyCode"><code v-text="rubyCode"></code></pre>
     </div>
   </div>
 
