--- a/app/views/vue/_elb_tabpane.html.erb
+++ b/app/views/vue/_elb_tabpane.html.erb
@@ -109,7 +109,7 @@
 
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.protocol') %></label>
-        <select v-model="protocol" class="form-control">
+        <select v-model="protocol" v-on="change: change_create_listener_protocol()" class="form-control">
           <option value="HTTP">HTTP</option>
           <option value="HTTPS">HTTPS(Secure HTTP)</option>
           <option value="TCP">TCP</option>
@@ -140,6 +140,7 @@
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.certificate_name') %></label>
         <select v-model="ssl_certificate_id" id="create_listener_ssl_certificate_id" class="form-control" options="server_certificate_name_items">
+          <option value=""><%= t('ec2_instances.none') %></option>
         </select>
       </div>
       
@@ -166,7 +167,7 @@
 
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.protocol') %></label>
-        <select v-model="protocol" id="edit_listener_protocol" class="form-control">
+        <select v-model="protocol" v-on="change: change_edit_listener_protocol()" id="edit_listener_protocol" class="form-control">
           <option value="HTTP">HTTP</option>
           <option value="HTTPS">HTTPS(Secure HTTP)</option>
           <option value="TCP">TCP</option>
@@ -197,6 +198,7 @@
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.certificate_name') %></label>
         <select v-model="ssl_certificate_id" id="edit_listener_ssl_certificate_id" class="form-control" options="server_certificate_name_items">
+          <option value=""><%= t('ec2_instances.none') %></option>
         </select>
       </div>
       
