--- a/lib/erb-builder/templates/chef_server.json.erb
+++ b/lib/erb-builder/templates/chef_server.json.erb
@@ -108,6 +108,7 @@
 
           "chef-server-ctl reconfigure\n",
 
+          "yum install -y git \n",
           "cd /opt/\n",
           "git clone https://github.com/skyarch-networks/chefserver-internal-bootstrap-addon.git\n",
           "cd chefserver-internal-bootstrap-addon\n",
