--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -71,10 +71,11 @@
                 <li><a href="#">Create Volume</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Attachable Volumes</li>
-                <li v-if="loading_volumes"><div-loader></div-loader></li>
+                <li class="dropdown-header" v-if="loading_volumes"><div-loader></div-loader></li>
                 <li v-repeat="volume: attachable_volumes" v-show="!loading_volumes">
                   <a href="#">{{volume.volume_id}}</a>
                 </li>
+                <li class="disabled" v-if="!loading_volumes && !attachable_volumes.length"><a href="#">No volumes available</a></li>
               </ul>
             </bootstrap-tooltip>
           </td>
