--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -73,7 +73,7 @@
                 <li class="dropdown-header">Attachable Volumes</li>
                 <li class="dropdown-header" v-if="loading_volumes"><div-loader></div-loader></li>
                 <li v-repeat="volume: attachable_volumes" v-show="!loading_volumes">
-                  <a href="#">{{volume.volume_id}} (Name: {{volume.tags.Name}}, size: {{volume.size}} GiB, type: {{volume.volume_type}})</a>
+                  <a v-on="click: attach_volume(volume.volume_id)" href="#">{{volume.volume_id}} (Name: {{volume.tags.Name}}, size: {{volume.size}} GiB, type: {{volume.volume_type}})</a>
                 </li>
                 <li class="disabled" v-if="!loading_volumes && !attachable_volumes.length"><a href="#">No volumes available</a></li>
               </ul>
