support japanesse version for commit: 69ef42cae37f1a354d6f9f48aa7ce0c5ca87a2ea

--- a/app/views/vue/_monitoring_tabpane.html.erb
+++ b/app/views/vue/_monitoring_tabpane.html.erb
@@ -60,6 +60,7 @@
                           <span>From: </span>
                       </span>
                       <input v-datepicker="dt" type='text' class="form-control" placeholder="Start"/>
+                      <input type="hidden">
                   </div>
               </div>
           </div>
