--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -65,17 +65,17 @@
                 </ul>
               </bootstrap-tooltip>
             </span>
-            <bootstrap-tooltip title="Attach" class="dropdown">
+            <bootstrap-tooltip title="<%= t 'ec2_instances.attach' %>" class="dropdown">
               <a v-on="click: load_volumes()" class="btn btn-xs btn-link" data-toggle="dropdown"><span class="glyphicon glyphicon-plus"></span></a>
               <ul id="attachVolume" class="dropdown-menu">
-                <li><a href="#">Create Volume</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Attachable Volumes</li>
+<!--                 <li><a href="#">Create Volume</a></li>
+                <li role="separator" class="divider"></li> -->
+                <li class="dropdown-header"><%= t 'ec2_instances.attachable_volumes' %></li>
                 <li class="dropdown-header" v-if="loading_volumes"><div-loader></div-loader></li>
                 <li v-repeat="volume: attachable_volumes" v-show="!loading_volumes">
                   <a v-on="click: attach_volume(volume.volume_id)" href="#">{{volume.volume_id}} (Name: {{volume.tags.Name}}, size: {{volume.size}} GiB, type: {{volume.volume_type}})</a>
                 </li>
-                <li class="disabled" v-if="!loading_volumes && !attachable_volumes.length"><a href="#">No volumes available</a></li>
+                <li class="disabled" v-if="!loading_volumes && !attachable_volumes.length"><a href="#"><%= t 'ec2_instances.no_volumes' %></a></li>
               </ul>
             </bootstrap-tooltip>
           </td>
