--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -99,12 +99,18 @@
     </div>
   </div>
 
+
   <div class="form-actions-top col-xs-12">
-    <button v-if="!loading" v-on="click: bootstrap()" class="btn btn-primary">
-      <%= t 'nodes.btn.bootstrap_with_chef_server' %>
+
+    <button v-attr="disabled: stopped" v-if="!loading" v-on="click: bootstrap()" class="btn btn-primary">
+      <bootstrap-tooltip v-if="stopped" title="<%= t('nodes.msg.stopped') %>">
+        <%= t 'nodes.btn.bootstrap_with_chef_server' %>
+      </bootstrap-tooltip>
+      <span v-if="!stopped"> <%= t 'nodes.btn.bootstrap_with_chef_server' %></span>
     </button>
     <div-loader v-if="loading"></div-loader>
   </div>
+
 </div>
 
 <%# show-node-infomation %>
