--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -102,11 +102,11 @@
 
   <div class="form-actions-top col-xs-12">
 
-    <button v-attr="disabled: stopped" v-if="!loading" v-on="click: bootstrap()" class="btn btn-primary">
-      <bootstrap-tooltip v-if="stopped" title="<%= t('nodes.msg.stopped') %>">
+    <button v-attr="disabled: !running" v-if="!loading" v-on="click: bootstrap()" class="btn btn-primary">
+      <bootstrap-tooltip v-if="!running" title="<%= t('nodes.msg.stopped') %>">
         <%= t 'nodes.btn.bootstrap_with_chef_server' %>
       </bootstrap-tooltip>
-      <span v-if="!stopped"> <%= t 'nodes.btn.bootstrap_with_chef_server' %></span>
+      <span v-if="running"> <%= t 'nodes.btn.bootstrap_with_chef_server' %></span>
     </button>
     <div-loader v-if="loading"></div-loader>
   </div>
