--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -100,6 +100,7 @@
         <edit-attr-tabpane       v-if="tabpane_active('edit_attr')"        ></edit-attr-tabpane>
         <serverspec-tabpane      v-if="tabpane_active('serverspec')"       ></serverspec-tabpane>
         <serverspec-results-tabpane v-if="tabpane_active('serverspec_results')"       ></serverspec-results-tabpane>
+        <operation-sched-tabpane v-if="tabpane_active('operation-sched')"  ></operation-sched-tabpane>
     </div>
   </div>
 </div>
@@ -125,5 +126,4 @@
 <script id="serverspec-tabpane-template"      type="text/template"> <%= render 'vue/serverspec_tabpane' %> </script>
 <script id="serverspec-results-tabpane-template"      type="text/template"> <%= render 'vue/serverspec_results_tabpane' %> </script>
 
-<!--Operation Schedule-->
-<script id="operation-sched-template" type="text/template"> <%=	render 'vue/operation_sched' %> </script>
+<script id="operation-sched-tabpane-template" type="text/template"> <%=	render 'vue/operation_sched_tabpane' %> </script>
