--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require animate.min
  *= require bootstrap-datetimepicker.min
  *= require selectize.paper
+ *= require fullcalendar
  */
 
 @font-face {
