--- a/app/views/vue/_operation_sched_tabpane.html.erb
+++ b/app/views/vue/_operation_sched_tabpane.html.erb
@@ -1,5 +1,6 @@
-<div class="container">
-  <title>Bootstrap 101 Template</title>
+<h3>Operation Scheduler </h3>
+<hr>
 
-  <h1>Hello, world!</h1>
+<div class="container">
+  <div id="calendar"></div>
 </div>
