--- a/app/views/monitorings/_modal_manage_schedule.html.erb
+++ b/app/views/monitorings/_modal_manage_schedule.html.erb
@@ -7,7 +7,14 @@
       </div>
       <div class="modal-body">
         <div class="col-md-12">
-          <h4>Duration</h4>
+          <h4>Duration <small><a href="#" id="duration" v-on="click:pop('duration')"
+            data-content="The duration of the schedule of the instance"
+            rel="popover" data-toggle="popover" data-trigger="focus"
+            data-original-title="Duration"
+            class="popover-help">
+            <span class="glyphicon glyphicon-question-sign"></span></a>
+            </small>
+          </h4>
           <div class="col-lg-12">
             <div class="row">
               <div class="col-md-6">
@@ -23,7 +30,15 @@
         </div>
         <div class="col-md-12">
           <hr>
-          <h4> Recurring </h4>
+          <h4> Recurring <small><a href="#" id="recurring" v-on="click:pop('recurring')"
+                               data-content="The time when the instance starts and stops depending on the selected options"
+                               data-toggle="popover"
+                               data-trigger="focus"
+                               rel="popover"
+                               data-original-title="Recurring schedule"
+                               class="popover-help">
+            <span class="glyphicon glyphicon-question-sign"></span></a>
+          </small></h4>
           <div class="form-group">
             <label class="col-lg-2 control-label">Every:</label>
             <div class="col-lg-10">
