--- a/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
+++ b/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
@@ -97,7 +97,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" v-on="click: save_sched()">Save</button>
+        <button type="button" class="btn btn-primary" v-on="click: save_sched()" data-dismiss="modal">Save</button>
       </div>
     </div>
   </div>
