get events functions and fetching of events from model to UIO

--- a/app/views/vue/_operation_sched_tabpane.html.erb
+++ b/app/views/vue/_operation_sched_tabpane.html.erb
@@ -13,12 +13,10 @@
     <tr v-repeat="ec2: instances.ec2_instances">
       <td>{{ec2.physical_id}}</td>
       <td>{{ec2.screen_name}}</td>
-      <td><button class="btn btn-xs btn-success"  v-on="click: manage_sched(ec2)" data-toggle="modal" data-target="#manage_schedule">Manage Schedule</button></td>
-    </tr>
-    <tr v-repeat="rds: instances.rds">
-      <td>{{rds.physical_id}}</td>
-      <td>{{rds.screen_name}}</td>
-      <td><button class="btn btn-xs btn-success">Manage Schedule</button></td>
+      <td>
+        <button class="btn btn-xs btn-primary"  v-on="click: get_sched(ec2)"><%= glyphicon 'calendar' %> View Schedule</button>
+        <button class="btn btn-xs btn-success"  v-on="click: manage_sched(ec2)" data-toggle="modal" data-target="#manage_schedule"><%= glyphicon 'edit' %> Manage Schedule</button>
+      </td>
     </tr>
   <!--TODO: other instances-->
   </tbody>
@@ -26,6 +24,7 @@
 
 <%= render 'infrastructures/modal/modal_manage_schedule' %>
 
-<div class="container">
+<div-loader v-if="event_loading"></div-loader>
+<div class="container" v-if="!event_loading">
   <div id="calendar"></div>
 </div>
