refetch events when manage schedule button is clicked.

--- a/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
+++ b/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
@@ -48,25 +48,25 @@
             <div class="col-lg-10">
               <div class="radio">
                 <label>
-                  <input type="radio" value="1" v-model="sel_instance.repeat_freq" name="repeat-freq" align="bottom" checked="true">
+                  <input type="radio" value="1" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom">
                   Everyday
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <input type="radio" value="2" v-model="sel_instance.repeat_freq" name="repeat-freq" align="bottom">
+                  <input type="radio" value="2"  v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom">
                   Weekdays (Monday - Friday)
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <input type="radio" value="3"  v-model="sel_instance.repeat_freq" name="repeat-freq" align="bottom">
+                  <input type="radio" value="3"  v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom">
                   Weekends (Saturday & Sunday)
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <input type="radio" value="4" v-model="sel_instance.repeat_freq" name="repeat-freq" align="bottom">
+                  <input type="radio" value="4" v-model="sel_instance.repeat_freq" name="sel_instance.repeat_freq" align="bottom">
                   Specific dates (other)
                 </label>
               </div>
